src/objects/Zuora__CreditMemo__c.object
<CustomObject>
    <description>Credit memos that you issued to your customers to reduce invoice and account balances.</description>
    <fields>
        <fullName>Zuora__AppliedAmount__c</fullName>
        <description>Only visible for credit memos. The amount of the credit memo that is applied.</description>
        <inlineHelpText>Only visible for credit memos. The amount of the credit memo that is applied.</inlineHelpText>
        <label>Applied Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__Balance__c</fullName>
        <description>Only visible for debit memos. The total amount that your customer owes to you for this memo.</description>
        <label>Balance</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__BillingAccount__c</fullName>
        <description>Zuora Billing Account object. An account is a customer account that collects all of the critical information about the customer, such as contact information, payment terms, and payment methods. You can use a customer account to track subscriptions, amendments, and transactions, such as invoices and payments.</description>
        <inlineHelpText>Zuora Billing Account object.</inlineHelpText>
        <label>Billing Account</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>Credit Memos</relationshipLabel>
        <relationshipName>Credit_Memos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Zuora__CancelledById__c</fullName>
        <label>Cancelled By Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__CancelledOn__c</fullName>
        <label>Cancelled On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__Comments__c</fullName>
        <description>The note of the memo.</description>
        <inlineHelpText>The note of the memo.</inlineHelpText>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__CreatedDate__c</fullName>
        <description>The date when the invoice was created in the Zuora system.</description>
        <label>Zuora Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__CurrencyFX__c</fullName>
        <description>Exchange Rate Date: Only available if you have the currency conversion feature enabled.</description>
        <label>ExchangeRateDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__DiscountAmount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field holds the Zuora object ID, and is used as external ID for data synchronization between Salesforce and Zuora.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field holds the Zuora object ID, and is used as external ID for data synchronization between Salesforce and Zuora.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Zuora__ZInvoice__c</referenceTo>
        <relationshipLabel>Credit Memo</relationshipLabel>
        <relationshipName>Credit_Memo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__MemoDate__c</fullName>
        <description>The date when this memo is created. If the credit memo is created by bill runs, the memo date is the invoice date.</description>
        <inlineHelpText>The date when this memo is created. If the credit memo is created by bill runs, the memo date is the invoice date.</inlineHelpText>
        <label>Credit Memo Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__PostedById__c</fullName>
        <label>Posted By ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__PostedOn__c</fullName>
        <label>Posted On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__ReasonCode__c</fullName>
        <description>The reason why you want to create this memo.</description>
        <inlineHelpText>The reason why you want to create this memo.</inlineHelpText>
        <label>Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__RefundAmount__c</fullName>
        <description>Only visible for credit memos. The amount of the credit memo that refunds to your customer.</description>
        <inlineHelpText>Only visible for credit memos. The amount of the credit memo that refunds to your customer.</inlineHelpText>
        <label>Refund Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__Source__c</fullName>
        <label>Source</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Status__c</fullName>
        <description>DEFAULT &apos;Draft. COMMENT &apos;Draft, Posted, Canceled,Error, PendingForTax, Generating, CancelInProgress&apos;</description>
        <inlineHelpText>DEFAULT &apos;Draft. COMMENT &apos;Draft, Posted, Canceled,Error, PendingForTax, Generating, CancelInProgress&apos;</inlineHelpText>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__TargetDate__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__TaxAmount__c</fullName>
        <description>The total tax amount of this memo.</description>
        <inlineHelpText>The total tax amount of this memo.</inlineHelpText>
        <label>Tax Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__TotalAmountWithoutTax__c</fullName>
        <description>The total non-tax amount.</description>
        <label>Total Amount Without Tax</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__TotalAmount__c</fullName>
        <description>The total amount of this memo.</description>
        <inlineHelpText>The total amount of this memo.</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__TotalTaxExemptAmount__c</fullName>
        <label>Total Tax Exempt Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__TransferredToAccounting__c</fullName>
        <description>The status of the mapping from Zuora to a third party, such as NetSuite or Salesforce. You can only edit this field when the memo is posted.

Supported values are:

No
Processing
Yes
Error
Ignore</description>
        <inlineHelpText>The status of the mapping from Zuora to a third party, such as NetSuite or Salesforce. You can only edit this field when the memo is posted.

Supported values are:

No
Processing
Yes
Error
Ignore</inlineHelpText>
        <label>Transferred To Accounting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__UpdatedDate__c</fullName>
        <description>The date when the invoice was updated in the Zuora system.</description>
        <label>Zuora Updated Date</label>
        <type>DateTime</type>
    </fields>
    <label>Credit Memo</label>
    <nameField>
        <label>Credit Memo Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Memos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>